--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,10 +1,9 @@
 [defaults]
 inventory = ./hosts
-#private_key_file = ./mykey.pem
+private_key_file = /home/ec2-user/myansible/mykey.pem
 interpreter_python = /usr/bin/python
 host_key_checking = False
-remote_user = ec2-user
-connection = ssh
+remote_user = "ec2-user"
 
 [privilege_escalation]
 become=True
