--- a/roles/deploy-cicd/tasks/main.yaml
+++ b/roles/deploy-cicd/tasks/main.yaml
@@ -8,7 +8,7 @@
     version: "{{version}}"
     username: "{{nexus_user}}"
     password: "{{nexus_password}}"    
-    repository_url: 'http://{{nexusserverip}}/repository/{{nexus_repo}}/'
+    repository_url: 'http://{{nexusserverip}}/repository/java-releases/'
     dest: "/tmp/"
     owner: "{{service_account}}"
     group: "{{service_account}}" 
