--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,9 +1,10 @@
 [defaults]
 inventory = ./hosts
-private_key_file = /home/ec2-user/myansible/mykey.pem
+private_key_file = ./mykey.pem
 interpreter_python = /usr/bin/python
 host_key_checking = False
-remote_user = "ec2-user"
+remote_user = ec2-user
+connection = ssh
 
 [privilege_escalation]
 become=True
